@@ -1,6 +1,10 @@
 Roundcube Webmail SieveRules
 ============================
 
+2011 08 24
+==========
+ * Improve plugin hook sieverules_saved
+
 2011 08 20
 ==========
  * Add plugin hook sieverules_saved
